# automode

./: Cargo.toml  README.md
.github/workflows/: release.yml
docs/superpowers/plans/: 2026-05-09-automode.md
docs/superpowers/specs/: 2026-05-09-automode-design.md
scripts/: antigravity-hook.sh  codex-hook.sh  hook.sh  install.sh
src/: cli.rs  config.rs  decision.rs  dev.rs  lib.rs  llama_client.rs  llama_process.rs  main.rs  policy.rs  server.rs  setup.rs  update.rs
tests/: test_config.rs  test_decision.rs  test_policy.rs  test_server.rs
